--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -1,54 +1,120 @@
 {% load static %}
 {% load navigation %} {# defined in prologin app #}
+
 <!DOCTYPE HTML>
-<html lang="fr">
+<!--
+	Escape Velocity by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 	<head>
-		<meta charset="utf-8">
-		<title>{% block title %}TITRE NON DÉFINIS{% endblock %}</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="{% static "gcc/css/style.css"%}">
-		<link rel="stylesheet" href="{% static 'lib/css/font-awesome.min.css' %}"/>
-		{% block head %}{% endblock %}
+		<title>{% block title %}Girls Can Code!{% endblock %}</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/main.css' %}" />
 	</head>
-	<body>
-		<header>
-			<section>
-				{% comment %}TODO Add real logo {% endcomment %}
-				<a href="{% url "gcc:index" %}" class="nav-title"><img src="{% static "gcc/img/logo_color_shaded.png" %}" alt="GCC!"></a>
-			</section>
-		</header>
-		<nav>
-			<a href="{% url "gcc:about" %}" class="{% active "^/gcc/about/" %}">
-				Les Stages
-			</a>
-			<a href="{% url "gcc:team_index" %}" class="{% active "^/gcc/team/" %}">
-				L'Équipe
-			</a>
-			<a href="{% url "gcc:posters" %}" class="{% active "^/gcc/poster/" %}">
-				Posters
-			</a>
-			<a href="{% url "gcc:photos_index" %}" class="{% active "^/gcc/photos/" %}">
-				Photos
-			</a>
-			<a href="#">Se connecter</a>
-		</nav>
-		<main>
+	<body class="homepage is-preload">
+		<div id="page-wrapper">
+			<!-- Header -->
+				<section id="header" class="wrapper" style="background: url({% static 'gcc/img/collage_index_blur.jpg' %}) center center; background-size: cover;">
+
+					<!-- Logo -->
+					<div id="logo">
+						<h1><a href="index.html">
+							<img src="{% static "img/logo-squeletton.png" %}" style="height: 34px; vertical-align: middle;"/>
+							Girls Can Code!
+						</a></h1>
+						<p>Stage d'informatique gratuit pour les filles de collège et lycée.</p>
+					</div>
+
+					<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li class="current"><a href="/gcc/">Acceuil</a></li>
+							<li><a href="{% url 'gcc:ressources' %}">Ressources</a></li>
+							<li>
+								<a href="#">Éditions</a>
+								<ul>
+									<li><a href="#">Édition 2018</a></li>
+									<li><a href="#">Édition 2017</a></li>
+								</ul>
+							</li>
+							<li><a href="{% url 'gcc:sponsors' %}">Sponsors</a></li>
+						</ul>
+					</nav>
+
+				</section>
+
+
 			{% block content %}<section><p>CONTENU NON DÉFINIS</p></section>{% endblock %}
-		</main>
-		<footer>
-			<section>
-				<p><a href="mailto:association@prologin.org?subject=GCC!">Nous contacter</a></p>
-				<p>Copyright © Prologin 2018</p>
-				<p>Les stages GCC! sont organisés par <a href="{% url "home" %}">l'association Prologin</a></p>
+
+			<!-- Footer -->
+			<section id="footer" class="wrapper">
+
+				<div class="title">Contact</div>
+
+				{% block footer %}{% endblock %}
+
+				<div class="container">
+					<div class="row">
+						<section class="feature-list small">
+							<div class="row">
+								<div class="col-6 col-12-small">
+									<section>
+										<h3 class="icon fa-home">Addresse</h3>
+										<p>
+											Association Prologin<br />
+											14-15 Rue Voltaire<br />
+											94270 Le Kremlin Bicêtre
+										</p>
+									</section>
+								</div>
+								<div class="col-6 col-12-small">
+									<section>
+										<h3 class="icon fa-comment">Social</h3>
+										<p>
+											<a style="font-size: 1.4em; margin-right: 5px;" href="https://www.facebook.com/stagegirlscancode"><i class="icon fa-facebook" style=""></i></a>
+											<a style="font-size: 1.4em; margin-right: 5px;" href="https://twitter.com/prologin"><i class="icon fa-twitter" style=""></i></a>
+											<a style="font-size: 1.4em; margin-right: 5px;" href="https://www.flickr.com/photos/prologin"><i class="icon fa-flickr" style=""></i></a>
+										</p>
+									</section>
+								</div>
+								<div class="col-6 col-12-small">
+									<section>
+										<h3 class="icon fa-envelope">Email</h3>
+										<p>
+											<a href="mailto:info@prologin.org">info@prologin.org</a>
+										</p>
+									</section>
+								</div>
+								<div class="col-6 col-12-small">
+									<section>
+										<h3 class="icon fa-phone">Téléphone</h3>
+										<p>
+											+331 44 08 01 90
+										</p>
+									</section>
+								</div>
+							</div>
+						</section>
+					</div>
+					<div id="copyright">
+						<ul>
+							<li>&copy; Girls Can Code!</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</div>
+
 			</section>
-		</footer>
-		<aside id="social">
-			<div>
-				<!-- social links -->
-				<a aria-label="facebook" href="https://www.facebook.com/stagegirlscancode"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-				<a aria-label="twitter" href="https://twitter.com/prologin"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-				<a aria-label="flickr" href="https://www.flickr.com/photos/prologin/"><i class="fa fa-flickr" aria-hidden="true"></i></a>
-			</div>
-		</aside>
+		</div>
+
+		<!-- Scripts -->
+			<script src="{% static 'gcc/escape-velocity/js/jquery.min.js' %}"></script>
+			<script src="{% static 'gcc/escape-velocity/js/jquery.dropotron.min.js' %}"></script>
+			<script src="{% static 'gcc/escape-velocity/js/browser.min.js' %}"></script>
+			<script src="{% static 'gcc/escape-velocity/js/breakpoints.min.js' %}"></script>
+			<script src="{% static 'gcc/escape-velocity/js/util.js' %}"></script>
+			<script src="{% static 'gcc/escape-velocity/js/main.js' %}"></script>
 	</body>
 </html>
