--- a/prologin/gcc/templates/gcc/ressources.html
+++ b/prologin/gcc/templates/gcc/ressources.html
@@ -1,124 +1,124 @@
-{% extends "gcc/base2.html" %}
+{% extends "gcc/base.html" %}
 {% load static %}
 
 {% block content %}
-			<!-- Intro -->
-				<section id="intro" class="wrapper style1">
-					<div class="title">S'entrainer à coder</div>
+	<!-- Intro -->
+	<section id="intro" class="wrapper style1">
+		<div class="title">S'entrainer à coder</div>
 
-            <div class="row">
-              <div class="off-2-large col-8-large off-1-medium col-10-medium col-12-small">
-    						<p class="style2" style="font-size: 1.5em; padding: 20px; font-weight: normal;">
-    							Beaucoup de ressources sur internet sont disponible pour te permettre de découvrir  l’informatique mais il est parfois difficile de s'orienter dans tous les contenus, nous détaillons quelques ressources particulièrement intéressantes.
-    						</p>
-              </div>
-            </div>
-				</section>
+		<div class="row">
+			<div class="off-2-large col-8-large off-1-medium col-10-medium col-12-small">
+				<p class="style2" style="font-size: 1.5em; padding: 20px; font-weight: normal;">
+					Beaucoup de ressources sur internet sont disponible pour te permettre de découvrir  l’informatique mais il est parfois difficile de s'orienter dans tous les contenus, nous détaillons quelques ressources particulièrement intéressantes.
+				</p>
+			</div>
+		</div>
+	</section>
 
-			<!-- Main -->
-				<section id="main" class="wrapper style2">
-					<div class="title">Quel langage ?</div>
-					<div class="container">
-            <div class="row">
-              <div class="off-2-large col-8-large off-1-medium col-10-medium col-12-small">
-                <p>
-                  Coder c’est décrire des opérations que la machine exécutera, et pour communiquer avec la machine on doit choisir au préalable dans quel langage on va lui parler.
-                  Il existe de très nombreux langages de programmation avec chacun leurs spécificités.
-                </p>
-                <p>
-                  Il est important de savoir le langage dans lequel on souhaite commencer à programmer avant de se lancer, on apprends à programmer dans un langage.
-                  Dans les stages nous enseignons principalement le Python (Python 3), nous le recommandons. C’est un langage assez facile à prendre en main (comparé à d’autre...) et qui a de nombreuses utilisations, par exemple il est utilisé pour coder Youtube.
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
+	<!-- Main -->
+	<section id="main" class="wrapper style2">
+		<div class="title">Quel langage ?</div>
+		<div class="container">
+			<div class="row">
+				<div class="off-2-large col-8-large off-1-medium col-10-medium col-12-small">
+					<p>
+						Coder c’est décrire des opérations que la machine exécutera, et pour communiquer avec la machine on doit choisir au préalable dans quel langage on va lui parler.
+						Il existe de très nombreux langages de programmation avec chacun leurs spécificités.
+					</p>
+					<p>
+						Il est important de savoir le langage dans lequel on souhaite commencer à programmer avant de se lancer, on apprends à programmer dans un langage.
+						Dans les stages nous enseignons principalement le Python (Python 3), nous le recommandons. C’est un langage assez facile à prendre en main (comparé à d’autre...) et qui a de nombreuses utilisations, par exemple il est utilisé pour coder Youtube.
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-        <section id="main" class="wrapper style3">
-          <div class="title">Commencer</div>
-						<!-- Image -->
-							<!-- <a href="#" class="image featured">
-								<img src="{% static 'gcc/img/collage_index.jpg' %}" alt="" />
-							</a> -->
+	<section id="main" class="wrapper style3">
+		<div class="title">Commencer</div>
+			<!-- Image -->
+				<!-- <a href="#" class="image featured">
+					<img src="{% static 'gcc/img/collage_index.jpg' %}" alt="" />
+				</a> -->
 
-					<div class="container">
-						<div class="row aln-center">
-							<div class="col-4 col-12-medium">
-								<section class="highlight">
-									<a href="#" class="image featured" style="height: 200px; padding: 20px;">
-                    <img src="{% static 'gcc/img/logo_ioi.png' %}" alt="" style="height: 100%" />
-                  </a>
+		<div class="container">
+			<div class="row aln-center">
+				<div class="col-4 col-12-medium">
+					<section class="highlight">
+						<a href="#" class="image featured" style="height: 200px; padding: 20px;">
+							<img src="{% static 'gcc/img/logo_ioi.png' %}" alt="" style="height: 100%" />
+						</a>
 
-									<h3><a href="#">France IOI</a></h3>
-									<p>
-                    France IOI offre une plateforme d'apprentissage avec des exercices de tous les niveaux, le tout gratuitement et entièrement en français !
-                  </p>
-									<ul class="actions">
-										<li><a target="_blank"  href="https://www.codecademy.com/fr" class="button style1">Codeacademy</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-12-medium">
-								<section class="highlight">
-									<a href="#" class="image featured" style="height: 200px; padding: 20px;">
-                    <img src="{% static 'gcc/img/logo_codeac.svg' %}" alt="" style="height: 100%;" />
-                  </a>
+						<h3><a href="#">France IOI</a></h3>
+						<p>
+							France IOI offre une plateforme d'apprentissage avec des exercices de tous les niveaux, le tout gratuitement et entièrement en français !
+						</p>
+						<ul class="actions">
+							<li><a target="_blank"  href="https://www.codecademy.com/fr" class="button style1">Codeacademy</a></li>
+						</ul>
+					</section>
+				</div>
+				<div class="col-4 col-12-medium">
+					<section class="highlight">
+						<a href="#" class="image featured" style="height: 200px; padding: 20px;">
+							<img src="{% static 'gcc/img/logo_codeac.svg' %}" alt="" style="height: 100%;" />
+						</a>
 
-									<h3><a href="#">Codeacademy</a></h3>
-									<p>
-                    Si tu parles un peu anglais ça peut être une bonne ressource.
-                  </p>
-									<ul class="actions">
-										<li><a target="_blank"  href="http://www.france-ioi.org/" class="button style1">France IOI</a></li> {# TODO LIEN EDITIONS #}
-									</ul>
-								</section>
-							</div>
+						<h3><a href="#">Codeacademy</a></h3>
+						<p>
+							Si tu parles un peu anglais ça peut être une bonne ressource.
+						</p>
+						<ul class="actions">
+							<li><a target="_blank"  href="http://www.france-ioi.org/" class="button style1">France IOI</a></li> {# TODO LIEN EDITIONS #}
+						</ul>
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Highlights -->
+	<section id="highlights" class="wrapper style2">
+		<div class="title">Se lancer</div>
+		<div class="container">
+			<div class="row">
+				<div class="off-2-large col-8-large off-1-medium col-10-medium col-12-small">
+					<p>
+						L’avantage quand on apprend l'informatique c’est qu'on peut vraiment en faire ce qu’on veut.
+						Il y a beaucoup de sous domaines et d'applications en informatique et pour continuer à coder c’est beaucoup plus motivant de trouver quelque chose qui nous plait.
+						Voilà quelques exemples :
+					</p>
+
+					<div class="row feature-list">
+						<div class="col-2" style="text-align:center">
+							<img src="https://djangogirls.org/static/img/global/logo.png" style="width: 200px; padding: 30px; margin:auto" />
+						</div>
+						<div class="col-10">
+							<section>
+								<h3>Django girls</h3>
+								<p>
+									Elles ont fait un tutoriel pour la création d’un blog en python avec un framework qui s’appelle django.
+									Il a été traduit entièrement en français et est très accessible.
+									Django est un outil qui permet beaucoup de chose, les site de GCC! et Prologin utilisent d’ailleurs ce framework.
+								</p>
+							</section>
+						</div>
+						<div class="col-2">
+							<img src="{% static 'img/logo_cube.png' %}" style="height: 100%; padding: 30px;" />
+						</div>
+						<div class="col-10">
+							<section>
+								<h3>Stage gratuit</h3>
+								<p>
+									C’est le nom de l’association qui organise les stages mais elle organise aussi un concours d’informatique.
+									Sur le site tu peux trouver les archives des années précédentes.
+									Ce sont des petits problèmes qui donnent une entrée et demandent une sortie et c’est à toi d’écrire le code pour obtenir la sortie à partir de l’entrée !
+								</p>
+							</section>
 						</div>
 					</div>
-        </section>
-
-			<!-- Highlights -->
-				<section id="highlights" class="wrapper style2">
-					<div class="title">Se lancer</div>
-          <div class="container">
-            <div class="row">
-              <div class="off-2-large col-8-large off-1-medium col-10-medium col-12-small">
-                <p>
-                  L’avantage quand on apprend l'informatique c’est qu'on peut vraiment en faire ce qu’on veut.
-                  Il y a beaucoup de sous domaines et d'applications en informatique et pour continuer à coder c’est beaucoup plus motivant de trouver quelque chose qui nous plait.
-                  Voilà quelques exemples :
-                </p>
-
-                <div class="row feature-list">
-                  <div class="col-2" style="text-align:center">
-                    <img src="https://djangogirls.org/static/img/global/logo.png" style="width: 200px; padding: 30px; margin:auto" />
-                  </div>
-                  <div class="col-10">
-                    <section>
-                      <h3>Django girls</h3>
-                      <p>
-                        Elles ont fait un tutoriel pour la création d’un blog en python avec un framework qui s’appelle django.
-                        Il a été traduit entièrement en français et est très accessible.
-                        Django est un outil qui permet beaucoup de chose, les site de GCC! et Prologin utilisent d’ailleurs ce framework.
-                      </p>
-                    </section>
-                  </div>
-                  <div class="col-2">
-                    <img src="{% static 'img/logo_cube.png' %}" style="height: 100%; padding: 30px;" />
-                  </div>
-                  <div class="col-10">
-                    <section>
-                      <h3>Stage gratuit</h3>
-                      <p>
-                        C’est le nom de l’association qui organise les stages mais elle organise aussi un concours d’informatique.
-                        Sur le site tu peux trouver les archives des années précédentes.
-                        Ce sont des petits problèmes qui donnent une entrée et demandent une sortie et c’est à toi d’écrire le code pour obtenir la sortie à partir de l’entrée !
-                      </p>
-                    </section>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-				</section>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
