--- a/prologin/gcc/templates/gcc/sponsors.html
+++ b/prologin/gcc/templates/gcc/sponsors.html
@@ -4,7 +4,8 @@
 {% block content %}
 	<!-- Intro -->
 	<section id="intro" class="wrapper style1">
-		<div class="title">Remerciements</div>
+		<div class="container">
+			<div class="title">Remerciements</div>
 
 			<div class="row">
 				<div class="off-2-large col-8-large off-1-medium col-10-medium col-12-small">
@@ -13,36 +14,38 @@
 					</p>
 				</div>
 			</div>
+		</div>
 	</section>
 
 	<!-- Main -->
 	<section id="main" class="wrapper style2">
-		<div class="title">Nos sponsors</div>
 		<div class="container">
+			<div class="title">Nos sponsors</div>
+
 			<div class="row">
 				<div class="off-1 col-2 col-4-medium col-6-small">
 					<a href="https://edu.google.com/intl/fr_be/?modal_active=none">
-						<img src="https://gcc.prologin.org/static/logo/google_edu.png" style="max-width: 100%"/>
+						<img alt="Google Education" src="{% static 'gcc/img/sponsors/google_edu.png' %}" style="max-width: 100%"/>
 					</a>
 				</div>
 				<div class="col-2 col-4-medium col-6-small">
 					<a href="https://www.fondation-blaise-pascal.org/">
-						<img src="https://gcc.prologin.org/static/logo/logo_fondation_bp.png" style="max-width: 100%"/>
+						<img alt="Fondation Blaise Pascal" src="{% static 'gcc/img/sponsors/logo_fondation_bp.png' %}" style="max-width: 100%"/>
 					</a>
 				</div>
 				<div class="col-2 col-4-medium col-6-small">
 					<a href="http://milyon.universite-lyon.fr/">
-						<img src="https://gcc.prologin.org/static/logo/milyon.png" style="max-width: 100%"/>
+						<img alt="Milyon" src="{% static 'gcc/img/sponsors/milyon.png' %}" style="max-width: 100%"/>
 					</a>
 				</div>
 				<div class="col-2 col-4-medium col-6-small">
 					<a href="http://milyon.universite-lyon.fr/">
-						<img src="https://gcc.prologin.org/static/logo/ens_lyon.png" style="max-width: 100%"/>
+						<img alt="ENS de Lyon" src="{% static 'gcc/img/sponsors/ens_lyon.png' %}" style="max-width: 100%"/>
 					</a>
 				</div>
 				<div class="col-2 col-4-medium col-6-small">
 					<a href="http://www.epita.fr/">
-						<img src="https://gcc.prologin.org/static/logo/epita.png" style="max-width: 100%"/>
+						<img alt="EPITA" src="{% static 'gcc/img/sponsors/epita.png' %}" style="max-width: 100%"/>
 					</a>
 				</div>
 			</div>
